fix(css): enable scrolling charts on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -77,3 +77,7 @@ body {
 .pointer {
   cursor: pointer;
 }
+
+.VictoryContainer svg {
+  pointer-events: none !important;
+}
